--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body {
     margin: 0;
 }
-
+/* NAV BAR */
 nav {
     display: flex;
     justify-content: center;
@@ -35,6 +35,29 @@ nav .action:hover {
     background-color: #FF7900;
     border-style: outset;
 }
+
+nav .underline {
+    position: relative;
+}
+
+nav .underline::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1.5px;
+    bottom: 0;
+    left: 0;
+    background-color: #FF7900;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.25s ease-in-out;
+}
+
+nav .underline:hover::after {
+    visibility: visible;
+    transform: scaleX(.85);
+}
+
 .container {
     display: flex;
     justify-content: space-between;
@@ -50,18 +73,98 @@ nav .action:hover {
     grid-auto-flow: column;
     gap: 32px;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 700;
 }
-/*Feel free to play around with the bottom piece to get a feel for how stuff looks and plays*/
-.home {
+/* HERO SECtION */
+.hero {
     
-    margin-top: 10%;
+    margin-top: 4%;
 }
-.home p {
+.hero p {
     color: darkblue; /*Also takes hex codes instead of words*/
     border: 10px;
     padding: 15px 30px;
 }
-.home h2 {
+.hero h2 {
     font-size: 24px;
+}
+
+.para-cont {
+    margin: 0 auto;
+    background-color: #f4f4f3;
+    font-size: 24px;
+}
+
+.para-cont:nth-child(odd) {
+    margin: 0 auto;
+    background-color: #ddd;
+    font-size: 24px;
+}
+
+
+.parallax {
+    background-image: url('images/homepage\ bg.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    height: 400px;
+}
+
+.parallax h1 {
+    display: flex;
+    justify-content: center;
+    padding-top: 2em;
+    color: white;
+    text-shadow: 2px 2px #084B8A;
+    font-size: 72px;
+}
+/* First View */
+
+.category-section {
+    margin: 10px;
+}
+
+.mix-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 1em;
+    grid-auto-rows: minmax(200px, auto);
+    margin: 15px;
+}
+
+.mix-grid .nested p {
+    display: grid;
+    grid-template-rows: repeat(2, 5px);
+    grid-row-gap: 1em;
+    grid-auto-rows: 50px;
+    border: black 1px solid;
+}
+
+.mix-grid > p, .mix-grid > div {
+    background-color: #f5f5f5;
+    padding: 1em;
+}
+
+/* HOT SECTION */
+.list-section {
+    margin: 10px;
+}
+
+.list-section h2 {
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 32px;
+}
+
+.scroller-grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-column-gap: 1em;
+    grid-auto-rows: minmax(50px, auto);
+    
+}
+
+.scroller-grid > p {
+    background-color: #f5f5f5;
+    padding: 1em;
 }
