added interactive home, profile, login page

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,8 @@ nav .action:hover {
   font-size: 16px;
   text-align: left;
   padding-bottom: 40px;
-  
+
+}
 nav .underline {
     position: relative;
 }
