--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ body {
 }
 /* NAV BAR */
 nav {
+    list-style: none;
+    text-decoration: none;
     display: flex;
     justify-content: center;
     background-color: #00274C;
