--- a/styles.css
+++ b/styles.css
@@ -211,3 +211,24 @@ nav .underline:hover::after {
     background-color: #f5f5f5;
     padding: 1em;
 }
+
+/* MESSAGE DIRECTOR */
+
+.messages {
+    position: fixed;
+    bottom: 1em;
+    right: 1em;
+    background-color: #FF7900;
+    font-size: 34px;
+    border: #00274C 5px solid;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+}
+
+.messages a {
+    color: #00274C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
