--- a/styles.css
+++ b/styles.css
@@ -1,213 +1,115 @@
 /* This is a font style I ripped off, Only temporary we can change this later */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;1,700&family=Open+Sans&family=Roboto:ital,wght@0,400;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;1,700&family=Open+Sans&family=Roboto:ital,wght@0,400;1,300&display=swap");
 
 /* How CSS works is that "*" ".class-name" and tags like "h1" are affected with the corresponding {} attributes */
-* { /* The star refers to all items in the html file */
-    font-family: 'Open Sans', sans-serif;
-    list-style: none;
-    text-decoration: none;
-    color: #FF7900;
+* {
+  /* The star refers to all items in the html file */
+  font-family: "Open Sans", sans-serif;
+  list-style: none;
+  text-decoration: none;
+  color: #ff7900;
 }
 
 body {
-    margin: 0;
-}
-/* NAV BAR */
-nav {
-    list-style: none;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    background-color: #00274C;
-    box-shadow: 0px 4px 20px 1em rgba(0, 0, 0, 0.15);
-    position: fixed;
-    width: 100%;
-    top: 0;
-}
-nav .action {
-    color: #FF7900;
-    font-weight: 700;
-    border-style: inset;
-    border-radius: 10px;
-    padding: 8px 16px;
-    transition: .25s ease-in-out;
+  margin: 0;
+  background-image: url("https://images.unsplash.com/photo-1512820790803-83ca734da794?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1198&q=80");
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-nav .action:hover {
-    color: #00274C;
-    background-color: #FF7900;
-    border-style: outset;
-}
-
-/* Creates a card object. */
-.card {
-  width: 320px;
-  height: 140px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin: 10px 5px;
-  padding: 4px;
-}
-
-/* Organizes the cards into rows. */
-.three-cards {
-  display: flex;
-  flex-direction: row;
-  padding: 20px 20px 20px 30px;
-}
-
-/* Used to resize the icons inside of the cards. */
-.icon-image {
-  width: 100px;
-  height: 100px;
-  padding: 10px 10px 10px 10px;
-}
-
-/* Class for cards' heading */
-.card-headings h2{
-  font-size: 18px;
-  text-align: left;
-  color: Orange;
-  padding-left: 75px;
-}
-
-/* Class for formatting an unordered list in a card */
-.card-list {
-  list-style-type: none;
-  font-size: 16px;
-  text-align: left;
-  padding-bottom: 40px;
-
-}
-nav .underline {
-    position: relative;
-}
-
-nav .underline::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 1.5px;
-    bottom: 0;
-    left: 0;
-    background-color: #FF7900;
-    visibility: hidden;
-    transform: scaleX(0);
-    transition: all 0.25s ease-in-out;
-}
-
-nav .underline:hover::after {
-    visibility: visible;
-    transform: scaleX(.85);
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 1200px;
-    padding: 0px 16px;
-}
-.init h1 {
-    font-size: 25px;
-}
-.nav-right {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 32px;
-    font-size: 20px;
-    font-weight: 700;
-}
 /* HERO SECtION */
 .hero {
-
-    margin-top: 4%;
+  margin: 5vw;
 }
-.hero p {
-    color: darkblue; /*Also takes hex codes instead of words*/
-    border: 10px;
-    padding: 15px 30px;
-}
-.hero h2 {
-    font-size: 24px;
-}
+.hero h1 {
+  display: flex;
+  justify-content: center;
+  padding-top: 2em;
+  color: white;
 
-.para-cont {
-    margin: 0 auto;
-    background-color: #f4f4f3;
-    font-size: 24px;
-}
-
-.para-cont:nth-child(odd) {
-    margin: 0 auto;
-    background-color: #ddd;
-    font-size: 24px;
-}
-
-
-.parallax {
-    background-image: url('images/homepage\ bg.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    height: 400px;
-}
-
-.parallax h1 {
-    display: flex;
-    justify-content: center;
-    padding-top: 2em;
-    color: white;
-    text-shadow: 2px 2px #084B8A;
-    font-size: 72px;
+  text-shadow: 2px 2px #084b8a;
+  font-size: 72px;
 }
 /* First View */
 
 .category-section {
-    margin: 10px;
+  margin: 10px;
 }
 
 .mix-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 1em;
-    grid-auto-rows: minmax(200px, auto);
-    margin: 15px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 1em;
+  grid-auto-rows: minmax(200px, auto);
+  margin: 5vh 15vw;
 }
 
-.mix-grid .nested p {
-    display: grid;
-    grid-template-rows: repeat(2, 5px);
-    grid-row-gap: 1em;
-    grid-auto-rows: 50px;
-    border: black 1px solid;
+.nested {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1em;
 }
 
-.mix-grid > p, .mix-grid > div {
-    background-color: #f5f5f5;
-    padding: 1em;
+.nested h3 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.nested p {
+  border: black 1px solid;
+}
+
+.mix-grid > p,
+.mix-grid > div {
+  background-color: #f5f5f5;
+  border-radius: 20px;
+  padding: 1em;
 }
 
 /* HOT SECTION */
 .list-section {
-    margin: 10px;
+  margin: 5vh 10vw;
+  padding: 25px;
+  background-color: white;
+  border-radius: 20px;
 }
 
 .list-section h2 {
-    justify-content: center;
-    align-items: center;
-    font-weight: 700;
-    font-size: 32px;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 32px;
 }
 
 .scroller-grid {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-column-gap: 1em;
-    grid-auto-rows: minmax(50px, auto);
-
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-column-gap: 1em;
+  grid-auto-rows: minmax(50px, auto);
 }
 
 .scroller-grid > p {
-    background-color: #f5f5f5;
-    padding: 1em;
+  background-color: #f5f5f5;
+  padding: 1em;
+}
+
+/* MESSAGE DIRECTOR */
+
+.messages {
+  position: fixed;
+  bottom: 1em;
+  right: 1em;
+  background-color: #ff7900;
+  font-size: 34px;
+  border: #00274c 5px solid;
+  border-radius: 50px;
+  width: 50px;
+  height: 50px;
+}
+
+.messages a {
+  color: #00274c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
