--- a/styles.css
+++ b/styles.css
@@ -20,15 +20,22 @@ body {
 /* HERO SECtION */
 .hero {
   margin: 5vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .hero h1 {
   display: flex;
   justify-content: center;
-  padding-top: 2em;
-  color: white;
-
+  align-items: center;
+  padding: 1em 0em;
+  color:#ff7900;
+  font-weight: 800;
   text-shadow: 2px 2px #084b8a;
   font-size: 72px;
+  background-color:rgb(245, 245, 245, 0.85);
+  border-radius: 20px;
+  width: 8em;
 }
 /* First View */
 
@@ -61,7 +68,7 @@ body {
 
 .mix-grid > p,
 .mix-grid > div {
-  background-color: #f5f5f5;
+  background-color:rgb(245, 245, 245, 0.85);
   border-radius: 20px;
   padding: 1em;
 }
@@ -70,7 +77,7 @@ body {
 .list-section {
   margin: 5vh 10vw;
   padding: 25px;
-  background-color: white;
+  background-color:rgb(245, 245, 245, 0.85);
   border-radius: 20px;
 }
 
@@ -89,7 +96,7 @@ body {
 }
 
 .scroller-grid > p {
-  background-color: #f5f5f5;
+  background-color:rgb(245, 245, 245, 0.85);
   padding: 1em;
 }
 
@@ -105,6 +112,7 @@ body {
   border-radius: 50px;
   width: 50px;
   height: 50px;
+  transition: all 300ms;
 }
 
 .messages a {
@@ -112,4 +120,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.messages:hover {
+  transform: scale(1.8);
+  box-shadow: 5px 10px grey;
+  bottom: 2em;
+  right: 2em;
 }
