--- a/registration.css
+++ b/registration.css
@@ -1,4 +1,3 @@
-/* This is a font style I ripped off, Only temporary we can change this later */
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;1,700&family=Open+Sans&family=Roboto:ital,wght@0,400;1,300&display=swap');
 @import "styles.css";
 
@@ -6,8 +5,10 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+
 .signup-header {
   color: Red;
+  text-align: center;
 }
 
 .profile-title {
@@ -34,27 +35,60 @@ h3 {
   padding: 15px 30px;
 }
 
-.form {
-  padding: 10px 10px 10px 10px;
-}
-
-/* card to contain sign up form */
-.card-body {
-  width: 500px;
-  height: 500x;
-  border: 10px solid #ccc;
-  border-radius: 5px;
-  margin-top: 100px;
-  margin-left: 100px;
-  padding: 10px 10px 10px 10px;
-}
-
 input[type=submit] {
-  background-color: #04AA6D;
+  background-color: green;
   border: none;
   color: white;
-  padding: 16px 32px;
   text-decoration: none;
-  margin: 4px 2px;
+  margin: 40px 2px;
   cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: Red;
+}
+
+.containers {
+  background-color: white;
+  padding: 20px
+  border-radius: 10px;
+  border-width: 10px;
+  border-color: Orange;
+  border-style: double;
+  width: 500px;
+  float: left;
+  display: flex;
+  margin-left: 100px;
+  margin-bottom: 100px;
+  align-items: center;
+  justify-content: center
+}
+
+input {
+  background-color: white;
+  width: 100%;
+  padding: 12px 20px;
+  padding-left: 100px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 20px;
+  color: Black;
+}
+
+
+input, select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input:focus {
+  background-color: lightblue;
 }
