--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,11 @@ body {
   background-color:rgb(245, 245, 245, 0.85);
   border-radius: 20px;
   width: 8em;
+  /* padding-top: 2em;
+  color: white;
+
+  text-shadow: 2px 2px #084b8a;
+  font-size: 72px; */
 }
 /* First View */
 
@@ -96,8 +101,29 @@ body {
 }
 
 .scroller-grid > p {
-  background-color:rgb(245, 245, 245, 0.85);
+  background-color: #f5f5f5;
   padding: 1em;
+}
+
+/* MESSAGE DIRECTOR */
+
+.messages {
+  position: fixed;
+  bottom: 1em;
+  right: 1em;
+  background-color: #ff7900;
+  font-size: 34px;
+  border: #00274c 5px solid;
+  border-radius: 50px;
+  width: 50px;
+  height: 50px;
+}
+
+.messages a {
+  color: #00274c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* MESSAGE DIRECTOR */
