--- a/listing.css
+++ b/listing.css
@@ -1,301 +1,41 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 
-.desktop-1 {
-  align-items: flex-end;
-  background-color:
-#00274c;
+
+.listing-rectanglecol{
   display: flex;
   flex-direction: column;
-  height: 1024px;
-  width: 1440px;
+  padding: 20px 20px 20px 30px;
+  margin-top:2em;
+  margin-left:10%;
+  margin-right:10%;
+  justify-content: center;
+  background-color: #00274C;
 }
 
-.hidden,
-.hidden * {
-  pointer-events: none;
-  visibility: hidden;
+.detailsrow{
+  position:relative;
+  justify-content: space-between;
+  display:flex;
+  flex-direction: row;
+  margin-top:0.5em;
+  padding-right: 10px;
+  min-width: 0;
+}
+.picturerow{
+  position:relative;
+  display:flex;
+  flex-direction: row-reverse;
+  min-width: 0;
 }
 
-.flex-col {
-  align-items: center;
-  display: flex;
+.priceinfocol{
+  display:flex;
   flex-direction: column;
-  min-height: 265px;
-  width: 1440px;
+  margin-top:0.5em;
 }
 
-.title {
-  letter-spacing: 0;
-  margin-left: 1px;
-  margin-top: 11px;
-  min-height: 65px;
-  text-align: center;
-  width: 871px;
-}
-
-.nav-bar {
-  background-color:
-#ff7900;
-  height: 189px;
-  width: 1440px;
-}
-
-.flex-row {
-  align-items: flex-end;
-  display: flex;
-  height: 691px;
-  margin-right: 25px;
-  margin-top: 11px;
-  min-width: 1314px;
-}
-
-.flex-col-2 {
-  align-items: flex-start;
-  display: flex;
+.productpicturecol{
+  display:flex;
   flex-direction: column;
-  margin-left: 160px;
-  min-height: 691px;
-  width: 535px;
-}
-
-.flex-row-2 {
-  align-items: flex-start;
-  display: flex;
-  margin-top: 40px;
-  min-width: 535px;
-}
-
-.seller {
-  letter-spacing: 0;
-  min-height: 51px;
-  width: 90px;
-}
-
-.profile-info {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  height: 226px;
-  margin-left: 31px;
-  overflow: hidden;
-  width: 414px;
-}
-
-.flex-row-3 {
-  align-items: center;
-  display: flex;
-  margin-left: -6.5px;
-  margin-top: -6px;
-  min-width: 420px;
-}
-
-.flex-col-3 {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  margin-left: 18px;
-  margin-top: 9px;
-  min-height: 80px;
-  width: 300px;
-}
-
-.name {
-  letter-spacing: 0;
-  min-height: 36px;
-  width: 300px;
-}
-
-.star-rating {
-  align-items: flex-start;
-  display: flex;
-  height: 44px;
-  padding: 2px 1px;
-  width: 215px;
-}
-
-.star {
-  height: 40px;
-  margin-left: 2px;
-  width: 40px;
-}
-
-.star-1 {
-  height: 40px;
-  width: 40px;
-}
-
-.star-2 {
-  height: 40px;
-  margin-left: 6px;
-  width: 40px;
-}
-
-.star-3 {
-  height: 40px;
-  margin-left: 2px;
-  width: 41px;
-}
-
-.overlap-group {
-  height: 102px;
-  position: relative;
-  width: 102px;
-}
-
-.exclude {
-  height: 102px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 102px;
-}
-
-.profile-picture {
-  height: 93px;
-  left: 6px;
-  position: absolute;
-  top: 6px;
-  width: 90px;
-}
-
-.contact-button:hover {
-  transform: translate(0, -5px);
-  box-shadow: 0px 12px 5px -8px
-rgba(0, 0, 0, 0.2);
-}
-
-.contact-button {
-  align-items: flex-end;
-  background-color: var(--congress-blue);
-  cursor: pointer;
-  display: flex;
-  height: 93px;
-  margin-top: 36px;
-  padding: 31px 120px;
-  transition: all 0.2s ease;
-  width: 329px;
-}
-
-.place {
-  color: var(--white);
-  font-family: var(--font-family-roboto);
-  font-size: var(--font-size-xs);
-  font-weight: 400;
-  letter-spacing: 0;
-  margin-left: 1px;
-  min-height: 30px;
-  width: 88px;
-}
-
-.pictures {
-  align-items: center;
-  display: flex;
-  width: 510px;
-}
-
-.patrick-1 {
-  height: 425px;
-  object-fit: cover;
-  width: 425px;
-}
-
-.patrick-container {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  margin-top: 1px;
-  min-height: 340px;
-  width: 85px;
-}
-
-.patrick {
-  height: 85px;
-  object-fit: cover;
-  width: 85px;
-}
-
-.flex-col-1 {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  min-height: 634px;
-  width: 619px;
-}
-
-.flex-row-1 {
-  align-items: flex-end;
-  display: flex;
-  height: 70px;
-  min-width: 336px;
-}
-
-.price {
-  color: var(--white);
-  font-family: var(--font-family-roboto);
-  font-size: var(--font-size-l);
-  font-weight: 400;
-  letter-spacing: 0;
-  min-height: 70px;
-  min-width: 150px;
-}
-
-.buy-button:hover {
-  transform: translate(0, -5px);
-  box-shadow: 0px 12px 5px -8px
-rgba(0, 0, 0, 0.2);
-}
-
-.buy-button {
-  align-items: center;
-  background-color: var(--congress-blue);
-  cursor: pointer;
-  display: flex;
-  height: 62px;
-  margin-left: 77px;
-  padding: 0 23px;
-  transition: all 0.2s ease;
-  width: 109px;
-}
-
-.buy {
-  color: var(--white);
-  font-family: var(--font-family-roboto);
-  font-size: var(--font-size-xs);
-  font-weight: 700;
-  letter-spacing: 0;
-  margin-left: 12px;
-  min-height: 30px;
-  width: 51px;
-}
-
-.condition-container {
-  align-items: center;
-  display: flex;
-  height: 27px;
-  margin-top: 25px;
-  min-width: 228px;
-}
-
-.condition-type {
-  height: 9px;
-  margin-left: 44px;
-  margin-top: 2.48px;
-  width: 89px;
-}
-
-.condition {
-  color: var(--white);
-  font-family: var(--font-family-roboto);
-  font-size: var(--font-size-xxs);
-  font-weight: 400;
-  letter-spacing: 0;
-  min-height: 27px;
-  width: 95px;
-}
-
-.description {
-  letter-spacing: 0;
-  margin-top: 57px;
-  min-height: 455px;
-  width: 619px;
+  float:right;
 }
