--- a/nav-styles.css
+++ b/nav-styles.css
@@ -34,7 +34,16 @@ nav .action:hover {
   background-color: #ff7900;
   border-style: outset;
 }
+/* Adds animation to the Buy Borrow Books Title */
 
+nav .init h1 {
+  transition: all 300ms;
+}
+
+nav .init h1:hover {
+  transform: scale(1.1);
+  text-shadow: 2px 2px black;
+}
 /* Creates a card object. */
 .card {
   width: 320px;
@@ -74,6 +83,7 @@ nav .action:hover {
   text-align: left;
   padding-bottom: 40px;
 }
+
 nav .underline {
   position: relative;
 }
