--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 /* This is a font style I ripped off, Only temporary we can change this later */
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;1,700&family=Open+Sans&family=Roboto:ital,wght@0,400;1,300&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;1,700&family=Fredoka:wght@300;400&family=Open+Sans&family=Poppins:wght@200;300;400&family=Roboto:ital,wght@0,400;1,300&display=swap');
 /* How CSS works is that "*" ".class-name" and tags like "h1" are affected with the corresponding {} attributes */
-* {
+html * {
   /* The star refers to all items in the html file */
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Poppins', sans-serif;
   list-style: none;
   text-decoration: none;
   color: #ff7900;
@@ -15,6 +14,7 @@ body {
   background-image: url("https://images.unsplash.com/photo-1512820790803-83ca734da794?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1198&q=80");
   background-size: cover;
   background-attachment: fixed;
+  
 }
 
 /* HERO SECtION */
@@ -36,16 +36,6 @@ body {
   background-color:rgb(245, 245, 245, 0.85);
   border-radius: 20px;
   width: 8em;
-  /* padding-top: 2em;
-  color: white;
-
-  text-shadow: 2px 2px #084b8a;
-  font-size: 72px; */
-}
-/* First View */
-
-.category-section {
-  margin: 10px;
 }
 
 .mix-grid {
@@ -53,7 +43,8 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 1em;
   grid-auto-rows: minmax(200px, auto);
-  margin: 5vh 15vw;
+  /* margin: 5vh 15vw; */
+  margin: 10vh 9.5vw;
 }
 
 .nested {
@@ -78,19 +69,29 @@ body {
   padding: 1em;
 }
 
-/* HOT SECTION */
+/* List SECTION */
 .list-section {
-  margin: 5vh 10vw;
+  margin: 10vh 9.5vw;
   padding: 25px;
   background-color:rgb(245, 245, 245, 0.85);
   border-radius: 20px;
 }
 
-.list-section h2 {
+.list-title {
+  display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: 700;
+}
+
+.list-section h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
   font-size: 32px;
+  background-color: #f5f5f5;
+  border-radius: 20px;
+  padding: 15px 30px;
 }
 
 .scroller-grid {
@@ -100,9 +101,39 @@ body {
   grid-auto-rows: minmax(50px, auto);
 }
 
-.scroller-grid > p {
+.scroller-grid .book-cont {
   background-color: #f5f5f5;
   padding: 1em;
+  height: 280px;
+  width: 250px;
+  border-radius: 20px;
+}
+
+.book-cont img{
+  width: 100%;
+  height: 100%;
+  transition: all 350ms;
+}
+
+.book-cont p {
+  visibility: hidden;
+  opacity: 0;
+  transition: all 125ms ease-in-out;
+}
+
+.book-cont:hover img {
+  height: 50%;
+}
+
+.book-cont:hover p {
+  visibility: visible;
+  opacity: 1;
+  font-size: 18px;
+}
+
+.book-cont:hover .smol-text {
+  font-size: 12px;
+  /* color: red; */
 }
 
 /* MESSAGE DIRECTOR */
