--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
 }
 
 .nested:hover {
-  box-shadow: 6px 5px 4px grey;
+  box-shadow: 0px 0px 19px #ffa353;
 }
 
 .nested h3 {
@@ -100,6 +100,11 @@ body {
   padding: 5px 0px;
 }
 
+.more-info {
+  font-weight: 100;
+  font-style: italic;
+}
+
 .mix-grid > p,
 .mix-grid > div {
   background-color:rgb(245, 245, 245, 0.85);
@@ -109,15 +114,12 @@ body {
 
 .rating {
   display: flex;
-  /* height: 60%; */
-  padding-top: 60px;
   align-items: center;
-  /* z-index: 0; */
   gap: 10px;
 }
 
 .star {
-  background-color: gray;
+  background-color: rgba(128, 128, 128, 0.45);
   border: black 3px solid;
   border-radius: 5px;
   width: 15px;
@@ -143,6 +145,11 @@ body {
   padding: 25px;
   background-color:rgb(245, 245, 245, 0.85);
   border-radius: 20px;
+  transition: all 300ms;
+}
+
+.list-section:hover {
+  box-shadow: 0px 0px 19px #ffa353;
 }
 
 .list-title {
@@ -177,31 +184,50 @@ body {
   border-radius: 20px;
 }
 
+.book-cont {
+  position: relative;
+  border-radius: 20px;
+}
+
+
 .book-cont img{
+  display: block;
   width: 100%;
   height: 100%;
-  transition: all 350ms;
+  border: #00274c 2px solid;
+  border-radius: 20px;
+  /* transition: all 350ms; */
 }
 
-.book-cont p {
-  visibility: hidden;
-  opacity: 0;
-  transition: all 125ms ease-in-out;
+.listing-info {
+  position: absolute;
+  overflow: hidden;
+  height: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: all 350ms ease;
 }
 
-.book-cont:hover img {
-  height: 50%;
+.book-cont:hover .listing-info {
+  bottom: 0;
+  height: 90%;
+  background-color: rgb(245, 245, 245, 0.85);
+  border-radius: 20px;
 }
 
-.book-cont:hover p {
-  visibility: visible;
-  opacity: 1;
+.listing-info {
+  padding: 15px;
+}
+
+.listing-info p {
   font-size: 18px;
+  font-weight: 600;
 }
 
-.book-cont:hover .smol-text {
+.listing-info .smol-text {
   font-size: 12px;
-  /* color: red; */
+  font-weight: 400;
 }
 
 /* MESSAGE DIRECTOR */
