--- a/payment/loading/loading.css
+++ b/payment/loading/loading.css
@@ -37,10 +37,19 @@ body {
     font-size: 64px;
 }
 
+.loading h3 {
+    margin: 0;
+}
+
+
 .active {
-    transform: scale(1.1);
-    color: goldenrod;
-    
+    transform: scale(1.8);
+    box-shadow: 0px 0px 19px #ffa353;
+    /* color: goldenrod; */
+    border: gold 5px solid;
+    border-radius: 20px;
+    top: 50%;
+    bottom: 50%;
 }
 
 .success {
@@ -49,8 +58,6 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 32px;
-    margin: 0;
-    padding: 0;
 }
 
 
