added login page css

--- a/login.css
+++ b/login.css
@@ -1,27 +1,54 @@
+
+#content-desktop {display: block;}
+#content-mobile {display: none;}
+
+
 /* Bordered form */
 form {
-  border: 3px solid #f1f1f1;
+  border: 3px solid #00000070;
+  width: 20%;
+  margin: auto;
+  background-color: #00000070;
+  color: white
+}
+
+h1 {
+  padding: 60px;
+  text-align: center;
+  background: #00000070;
+  color: orange;
+  font-size: 30px;
+}
+
+body {
+  background-image: url("https://static01.nyt.com/images/2017/05/11/t-magazine/bookstore-slide-2MCD/bookstore-slide-2MCD-superJumbo.jpg?quality=75&auto=webp");
+  background-size: cover;
+  background-attachment: fixed;
+  margin: auto;
 }
 
 /* Full-width inputs */
 input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
+  width: 90%;
+  padding: 10px 20px;
   margin: 8px 0;
+  margin-left: 8px;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 3px solid #ccc;
   box-sizing: border-box;
 }
 
 /* Set a style for all buttons */
 button {
   background-color: #FF8000;
-  color: orange;
+  color: white;
+  position: Center;
   padding: 14px 20px;
   margin: 8px 0;
+  margin-left: 8px;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 90%;
 }
 
 /* Add a hover effect for buttons */
@@ -42,12 +69,6 @@ button:hover {
   margin: 24px 0 12px 0;
 }
 
-/* Avatar image */
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
-
 /* Add padding to containers */
 .container {
   padding: 16px;
@@ -58,9 +79,7 @@ span.psw {
   float: right;
   padding-top: 16px;
 }
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 768px) {
   span.psw {
     display: block;
     float: none;
@@ -68,4 +87,21 @@ span.psw {
   .cancelbtn {
     width: 100%;
   }
+  h1 {
+    padding: 20px;
+    text-align: center;
+    background: #00000070;
+    color: orange;
+    font-size: 30px;
+  }
+  form {
+    border: 3px solid #00000070;
+    width: 80%;
+    position: Center;
+    background-color: #00000070;
+    color: white
+  }
+#content-desktop {display: none;}
+#content-mobile {display: block;}
+
 }
