--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,92 @@ body {
   right: 2em;
 }
 
+.row{
+    background-color:rgb(0, 0, 0, 0.25);
+}
+
+input[type=search] {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  margin-left: 100px;
+}
+.button{
+    padding: 12px 20px;
+}
 @media screen and (max-width: 768px){
+  .row{
+      background-color:rgb(0, 0, 0, 0.25);
+  }
+  .column{
+      margin-left: 100px;
+      padding: 1em 0em;
+      justify-content: center;
+      align-items: center;}
+
+  .card{
+    margin-left: 100px;
+    padding: 1em 0em;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero {
+    margin: 5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hero h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em 0em;
+    color:#ff7900;
+    font-weight: 800;
+    text-shadow: 2px 2px #084b8a;
+    font-size: 45px;
+    background-color:rgb(0, 0, 0, 0.55);
+    border-radius: 20px;
+    width: 8em;
+    margin-top: 100px;
+  }
+
+.mix-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: 1em;
+  grid-row-gap: 1em;
+}
+
+.mix-grid > div {
+  background-color:rgb(0, 0, 0, 0.55);
+  border-radius: 20px;
+  padding: 1em;
+}
+
+.list-section {
+  margin: 5vh 10vw;
+  padding: 25px;
+  background-color:rgb(0, 0, 0, 0.55);
+  border-radius: 20px;
+}
+.scroller-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 1em;
+  grid-auto-rows: minmax(50px, auto);
+}
+.list-section h2 {
+  padding: 1em;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 32px;
+}
+
+
+}
 
 }
