--- a/listing.css
+++ b/listing.css
@@ -17,7 +17,7 @@
   justify-content: space-between;
   display:flex;
   flex-direction: row;
-  margin-top:0.5em;
+  margin:0px;
   padding-right: 10px;
   min-width: 0;
 }
@@ -31,11 +31,59 @@
 .priceinfocol{
   display:flex;
   flex-direction: column;
-  margin-top:0.5em;
+  margin-top:0px;
+}
+
+.profilecol{
+  display:flex;
+  flex-direction: column;
+  margin-top:0px;
+}
+
+.profilerow{
+  display:flex;
+  flex-direction: row;
+  margin-top:0px;
 }
 
 .productpicturecol{
   display:flex;
   flex-direction: column;
   float:right;
+}
+
+.avatar {
+  border-radius: 50%;
+  width:50px;
+  height:50px;
+}
+
+.buttonbuy {
+  color: -internal-light-dark(#084B8A, white); ;
+  height: 40px;
+  width: 60px;
+}
+
+.buttoncontact {
+  color: #084B8A;
+}
+
+h2 {
+  color: white;
+}
+
+h3{
+  color: white;
+  margin-top:0px;
+}
+
+h4 {
+  font-size: 20px;
+  margin-top: 0px;
+  color: white;
+}
+
+p{
+  color:white;
+  font-size: 15px;
 }
