--- a/payment/loading/loading.css
+++ b/payment/loading/loading.css
@@ -1,17 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;1,700&family=Open+Sans&family=Roboto:ital,wght@0,400;1,300&display=swap");
 * {
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
     background-image: url(../../images/homepage\ bg.jpg);
     background-size: cover;
 }
-
-.hidden {
-    display: none;
-}
-
 
 .background {
     display: flex;
@@ -42,8 +37,29 @@ body {
     font-size: 64px;
 }
 
+.loading h3 {
+    margin: 0;
+}
+
+
 .active {
-    transform: scale(1.1);
-    color: red;
-    
+    transform: scale(1.8);
+    box-shadow: 0px 0px 19px #ffa353;
+    /* color: goldenrod; */
+    border: gold 5px solid;
+    border-radius: 20px;
+    top: 50%;
+    bottom: 50%;
+}
+
+.success {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+}
+
+.hidden {
+    display: none;
 }
