--- a/nav-styles.css
+++ b/nav-styles.css
@@ -15,15 +15,19 @@ nav {
   display: flex;
   justify-content: center;
   background-color: #00274c;
-  box-shadow: 0px 4px 20px 1em rgba(0, 0, 0, 0.15);
+  border: #002a51 5px solid;
+  border-radius: 0 0 20px 20px;
+  box-shadow: 0px 0px 30px #00274c;
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 4;
 }
 nav .action {
   color: #ff7900;
+  font-size: 18px;
   font-weight: 700;
-  border-style: inset;
+  border-style: solid;
   border-radius: 10px;
   padding: 8px 16px;
   transition: 0.25s ease-in-out;
@@ -32,100 +36,69 @@ nav .action {
 nav .action:hover {
   color: #00274c;
   background-color: #ff7900;
-  border-style: outset;
 }
 /* Adds animation to the Buy Borrow Books Title */
 
-nav .init h1 {
-  transition: all 300ms;
+nav .item {
+  font-size: 32px;
+  font-weight: 500;
+  transition: all 800ms;
+}
+/* Adds animation to the Buy Borrow Books Title */
+
+nav .item:hover {
+  transform: rotate(360deg)  scale(1.3);
+  font-weight: 900;
+  text-shadow: 2px 2px 8px black;
 }
 
-nav .init h1:hover {
-  transform: scale(1.1);
-  text-shadow: 2px 2px black;
-}
-/* Creates a card object. */
-.card {
-  width: 320px;
-  height: 140px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin: 10px 5px;
-  padding: 4px;
-}
-
-/* Organizes the cards into rows. */
-.three-cards {
-  display: flex;
-  flex-direction: row;
-  padding: 20px 20px 20px 30px;
-}
-
-/* Used to resize the icons inside of the cards. */
-.icon-image {
-  width: 100px;
-  height: 100px;
-  padding: 10px 10px 10px 10px;
-}
-
-/* Class for cards' heading */
-.card-headings h2 {
-  font-size: 18px;
-  text-align: left;
-  color: Orange;
-  padding-left: 75px;
-}
-
-/* Class for formatting an unordered list in a card */
-.card-list {
-  list-style-type: none;
-  font-size: 16px;
-  text-align: left;
-  padding-bottom: 40px;
-}
-
-nav .underline {
-  position: relative;
-}
-
-nav .underline::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 1.5px;
-  bottom: 0;
-  left: 0;
-  background-color: #ff7900;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.25s ease-in-out;
-}
-
-nav .underline:hover::after {
-  visibility: visible;
-  transform: scaleX(0.85);
-}
-
-.container {
+nav .container {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 1200px;
-  padding: 0px 16px;
-}
-.init h1 {
-  font-size: 25px;
-}
-.nav-right {
-  display: grid;
-  grid-auto-flow: column;
-  gap: 32px;
-  font-size: 20px;
-  font-weight: 700;
+  width: 1225px;
+  height: 80px;
 }
 
+nav .nav-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 15px;
+}
+
+nav .nav-left h1 {
+  transition: all 300ms;
+}
+
+nav .nav-left h1:hover {
+  transform: scale(1.1);
+}
+
+nav .nav-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 30px;
+}
+
+nav .nav-right .item {
+  font-size: 28px;
+}
+
+.mobileHome {
+  visibility: hidden;
+}
 
 @media screen and (max-width: 768px){
+  .mobileHome {
+    visibility: visible;
+  }
+  
   .nav-right li{
       font-size: 15px
     }
@@ -133,4 +106,15 @@ nav .underline:hover::after {
   .container h1{
     display:none;
   }
+
+  nav {
+    width: 98%;
+  }
+
+  nav .container{
+    justify-content: center;
+    
+    /* padding-right: 20px; */
+  }
+
 }
